--- a/Web/src/element.scss
+++ b/Web/src/element.scss
@@ -33,3 +33,17 @@
 .el-checkbox__inner {
   border-radius: 50%;
 }
+.el-message-box {
+  .el-message-box__container {
+    justify-content: center;
+    .el-message-box__message {
+      overflow: hidden;
+    }
+  }
+  &.el-message-add_friend {
+    width: 300px;
+    .el-message-box__message {
+      flex: 1;
+    }
+  } 
+}
